--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-    </head>
-    <body></body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+            <!-----------------------------------------------------------MENU-------------------------------------------------------->
+            <nav class="menu">
+                <ul class="logo">
+                    <li class="menu-logo">
+                        <a class="menu-link-1" href="index.html"
+                            ><span class="section-title-color">Anna</span> Ortiz</a
+                        >
+                    </li>
+                </ul>
+                <ul class="logo2">
+                    <li class="menu-list">
+                        <a class="menu-link" href="#contact">Contact</a>
+                    </li>
+                    <li class="menu-list">
+                        <a class="menu-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="menu-list">
+                        <a class="menu-link" href="#about">About</a>
+                    </li>
+                    <li class="menu-list">
+                        <a class="menu-link" href="#work">Work</a>
+                    </li>
+                    <li class="menu-list">
+                        <a class="menu-link" href="#">Home</a>
+                    </li>
+                </ul>
+            </nav>
+    
+
 </html>
