--- a/index.html
+++ b/index.html
@@ -1,38 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-            <!-----------------------------------------------------------MENU-------------------------------------------------------->
-            <nav class="menu">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Worst Site Ever</title>
+        <link rel="stylesheet" href="css/styles.css" />
+    </head>
+    <body>
+        <!-----------------------------------------------------------MENU-------------------------------------------------------->
+        <nav class="menu">
+            <ul class="logo">
+                <li class="menu-logo">
+                    <a class="menu-link-1" href="index.html"
+                        ><span class="section-title-color">Anna</span> Ortiz</a
+                    >
+                </li>
+            </ul>
+            <ul class="logo2">
+                <li class="menu-list">
+                    <a class="menu-link" href="#contact">Contact</a>
+                </li>
+                <li class="menu-list">
+                    <a class="menu-link" href="#skills">Skills</a>
+                </li>
+                <li class="menu-list">
+                    <a class="menu-link" href="#about">About</a>
+                </li>
+                <li class="menu-list">
+                    <a class="menu-link" href="#work">Work</a>
+                </li>
+                <li class="menu-list">
+                    <a class="menu-link" href="#">Home</a>
+                </li>
+            </ul>
+        </nav>
+
+        <nav class="navbar">
+            <div class="container nav-container">
+                <input class="checkbox" type="checkbox" name="" id="" />
                 <ul class="logo">
                     <li class="menu-logo">
                         <a class="menu-link-1" href="index.html"
-                            ><span class="section-title-color">Anna</span> Ortiz</a
+                            ><span class="section-title-color">Anna</span>
+                            Ortiz</a
                         >
                     </li>
                 </ul>
-                <ul class="logo2">
-                    <li class="menu-list">
-                        <a class="menu-link" href="#contact">Contact</a>
+                <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                </div>
+                <div class="menu-items">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li>
+                        <a href="#contact">Contact</a>
                     </li>
-                    <li class="menu-list">
-                        <a class="menu-link" href="#skills">Skills</a>
+                </div>
+            </div>
+        </nav>
+        <!----------------------------------------------------------INFO--------------------------------------------------------->
+        <section class="info">
+            <div class="info-container">
+                <div class="info-1">
+                    <h3>Hello! &#128075;</h3>
+                    <h1>
+                        <span class="section-title-color"
+                            >I am a photographer</span
+                        >
+                    </h1>
+                    <h3>Based in Vancouver, Canada.</h3>
+                    <br />
+                    <spam class="inline">
+                        <a class="button-primary" href="">My Work</a>
+                        <a class="button-secondary" href="">About Me</a>
+                    </spam>
+                </div>
+                <div class="info-2">
+                    <img class="info-img" src="imgs/woman.jpg" />
+                </div>
+            </div>
+        </section>
+        <!---------------------------------------------------------MY WORK-------------------------------------------------------->
+        <section class="work-container">
+            <h2 id="work" class="section-title">
+                <span class="section-title-color">My</span> Work
+            </h2>
+            <div class="work">
+                <img class="work-img" src="imgs/nature-1.jpg" alt="photo one" />
+                <img class="work-img" src="imgs/nature-2.jpg" alt="photo two" />
+                <img
+                    class="work-img"
+                    src="imgs/nature-3.jpg"
+                    alt="photo three"
+                />
+                <img
+                    class="work-img"
+                    src="imgs/nature-4.jpg"
+                    alt="photo four"
+                />
+                <img
+                    class="work-img"
+                    src="imgs/nature-5.jpg"
+                    alt="photo five"
+                />
+                <img class="work-img" src="imgs/nature-6.jpg" alt="photo six" />
+            </div>
+        </section>
+        <!---------------------------------------------------------ABOUT ME-------------------------------------------------------->
+        <h2 id="about" class="section-title">
+            <span class="section-title-color">About</span> Me
+        </h2>
+        <section class="about">
+            <div class="about-box-1">
+                <img class="about-img" src="imgs/woman.jpg" />
+            </div>
+            <div class="about-box-2">
+                <p class="about-text">
+                    I am Anna, I have more than 5 years as a photographer
+                    focused mainly on tourism, photographing for small and large
+                    companies. Passionate about nature and people, and
+                    everything that touches the human mind.
+                </p>
+                <a class="about-button" href="nowhere.html">Download My CV</a>
+            </div>
+        </section>
+        <!---------------------------------------------------------MY SKILLS-------------------------------------------------------->
+        <h2 id="skills" class="section-title">
+            <span class="section-title-color">My</span> Skills
+        </h2>
+        <section class="skills">
+            <div class="bar">
+                <div class="progress progress-70">Lightroom</div>
+                <div class="rest">70%</div>
+                <div class="progress progress-70">Photoshop</div>
+                <div class="rest">70%</div>
+                <div class="progress progress-80">Premiere</div>
+                <div class="rest">80%</div>
+                <div class="progress progress-80">After</div>
+                <div class="rest">80%</div>
+            </div>
+
+            <div class="bar">
+                <div class="progress progress-70">VSCO</div>
+                <div class="rest">70%</div>
+                <div class="progress progress-70">Afterlight</div>
+                <div class="rest">70%</div>
+                <div class="progress progress-80">Ligh</div>
+                <div class="rest">80%</div>
+                <div class="progress progress-80">Snapseed</div>
+                <div class="rest">80%</div>
+            </div>
+        </section>
+        <!----------------------------------------------------------CONTACT-------------------------------------------------------->
+        <h2 class="section-title">
+            <span class="section-title-color">Contact</span> Me
+        </h2>
+        <section id="contact" class="contact">
+            <form>
+                <input
+                    class="form form-text"
+                    type="text"
+                    placeholder="Name"
+                    required
+                />
+                <input
+                    class="form form-text"
+                    type="email"
+                    placeholder="Email"
+                    required
+                />
+                <input
+                    class="form form-text"
+                    type="text"
+                    placeholder="Subject"
+                    required
+                />
+                <textarea
+                    class="form-textarea"
+                    rows="4"
+                    cols="50"
+                    placeholder="Message"
+                ></textarea>
+                <input class="submit form-text" type="submit" value="Send" />
+            </form>
+            <div class="social-container">
+                <h4 class="social-title">Get In Touch</h4>
+                <ul class="social">
+                    <li class="social-list">
+                        <img class="icon" src="imgs/phone.svg" />
+                        <p class="social-text">(782) 154-3658</p>
                     </li>
-                    <li class="menu-list">
-                        <a class="menu-link" href="#about">About</a>
+                    <li class="social-list">
+                        <img class="icon" src="imgs/mail.svg" />
+                        <p class="social-text">annaortiz@gmail.com</p>
                     </li>
-                    <li class="menu-list">
-                        <a class="menu-link" href="#work">Work</a>
+                    <li class="social-list">
+                        <img class="icon" src="imgs/linkedin.svg" />
+                        <p class="social-text">
+                            <a href="https://www.linkedin.com/">Anna Ortiz</a>
+                        </p>
                     </li>
-                    <li class="menu-list">
-                        <a class="menu-link" href="#">Home</a>
+                    <li class="social-list">
+                        <img class="icon" src="imgs/inst.svg" />
+                        <p class="social-text">
+                            <a href="https://www.instagram.com/">@AnnaOrtiz</a>
+                        </p>
                     </li>
                 </ul>
-            </nav>
-    
-
+            </div>
+        </section>
+        <!----------------------------------------------------------FOOTER-------------------------------------------------------->
+        <footer>
+            <ul class="footer-ul">
+                <li class="footer-list">
+                    <a href="facebook.com" target="_blank"
+                        ><img
+                            class="footer-img"
+                            src="imgs/facebook-svgrepo-com.svg"
+                    /></a>
+                </li>
+                <li class="footer-list">
+                    <a href="instagram.com" target="_blank"
+                        ><img
+                            class="footer-img"
+                            src="imgs/instagram-svgrepo-com.svg"
+                    /></a>
+                </li>
+                <li class="footer-list">
+                    <a href="pinterest.com" target="_blank"
+                        ><img
+                            class="footer-img"
+                            src="imgs/pinterest-svgrepo-com.svg"
+                    /></a>
+                </li>
+                <li class="footer-list">
+                    <a href="youtube.com" target="_blank"
+                        ><img
+                            class="footer-img"
+                            src="imgs/youtube-svgrepo-com.svg"
+                    /></a>
+                </li>
+                <li class="footer-list">
+                    <a href="twitter.com" target="_blank"
+                        ><img
+                            class="footer-img"
+                            src="imgs/twitter-svgrepo-com.svg"
+                    /></a>
+                </li>
+                <li class="footer-list">
+                    <a href="linkedin.com" target="_blank"
+                        ><img
+                            class="footer-img"
+                            src="imgs/linkedin-svgrepo-com.svg"
+                    /></a>
+                </li>
+            </ul>
+            <p class="footer-text">All Rights Reserved - 2023</p>
+        </footer>
+    </body>
 </html>
