--- a/index.html
+++ b/index.html
@@ -13,152 +13,105 @@
             <ul class="logo">
                 <li class="menu-logo">
                     <a class="menu-link-1" href="index.html"
-                        ><span class="section-title-color">Anna</span> Ortiz</a
+                        ><span class="section-title-color">hELL0</span> w0RLD</a
                     >
                 </li>
             </ul>
             <ul class="logo2">
                 <li class="menu-list">
-                    <a class="menu-link" href="#contact">Contact</a>
+                    <a class="menu-link" href="#contact"
+                        >i DO NOT want to talk with you</a
+                    >
                 </li>
                 <li class="menu-list">
-                    <a class="menu-link" href="#skills">Skills</a>
+                    <a class="menu-link" href="#skills">in PROGRESS...</a>
                 </li>
                 <li class="menu-list">
-                    <a class="menu-link" href="#about">About</a>
+                    <a class="menu-link" href="#about">i JUST said this</a>
                 </li>
                 <li class="menu-list">
-                    <a class="menu-link" href="#work">Work</a>
+                    <a class="menu-link" href="#work">UP UP UP</a>
                 </li>
                 <li class="menu-list">
-                    <a class="menu-link" href="#">Home</a>
+                    <a class="menu-link" href="#">g0 AWAY</a>
                 </li>
             </ul>
         </nav>
 
-        <nav class="navbar">
-            <div class="container nav-container">
-                <input class="checkbox" type="checkbox" name="" id="" />
-                <ul class="logo">
-                    <li class="menu-logo">
-                        <a class="menu-link-1" href="index.html"
-                            ><span class="section-title-color">Anna</span>
-                            Ortiz</a
-                        >
-                    </li>
-                </ul>
-                <div class="hamburger-lines">
-                    <span class="line line1"></span>
-                    <span class="line line2"></span>
-                    <span class="line line3"></span>
-                </div>
-                <div class="menu-items">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                </div>
-            </div>
-        </nav>
         <!----------------------------------------------------------INFO--------------------------------------------------------->
         <section class="info">
             <div class="info-container">
                 <div class="info-1">
-                    <h3>Hello! &#128075;</h3>
+                    <h3>hELL0 &#128075;</h3>
                     <h1>
-                        <span class="section-title-color"
-                            >I am a photographer</span
-                        >
+                        <span class="section-title-color">w0RLD, hELL0</span>
                     </h1>
-                    <h3>Based in Vancouver, Canada.</h3>
+                    <h3>g0 AWAY, PLEASE!!!!!!!!!!</h3>
                     <br />
                     <spam class="inline">
-                        <a class="button-primary" href="">My Work</a>
-                        <a class="button-secondary" href="">About Me</a>
+                        <a class="button-primary" href="">gET 0UT</a>
+                        <a class="button-secondary" href="">g0 AWAY</a>
                     </spam>
                 </div>
-                <div class="info-2">
-                    <img class="info-img" src="imgs/woman.jpg" />
-                </div>
+            </div>
+
+            <input id="open-popup" name="popup" type="radio" hidden checked />
+            <input id="close-popup" name="popup" type="radio" hidden />
+
+            <label id="open-popup-btn" for="open-popup"></label>
+            <label id="close-popup-btn" for="close-popup"></label>
+
+            <div id="content">
+                <img class="close-icon" src="imgs/close-button.svg" />
+                <div id="close-popup-btn"></div>
+                <p>s0rry f0r b0thering y0u</p>
             </div>
         </section>
-        <!---------------------------------------------------------MY WORK-------------------------------------------------------->
+        <!---------------------------------------------------------IMAGES-------------------------------------------------------->
         <section class="work-container">
             <h2 id="work" class="section-title">
-                <span class="section-title-color">My</span> Work
+                <span class="section-title-color">up</span> up UP
             </h2>
             <div class="work">
-                <img class="work-img" src="imgs/nature-1.jpg" alt="photo one" />
-                <img class="work-img" src="imgs/nature-2.jpg" alt="photo two" />
                 <img
                     class="work-img"
-                    src="imgs/nature-3.jpg"
+                    src="imgs/img-error-1.png"
+                    alt="photo one"
+                />
+
+                <img
+                    class="work-img"
+                    src="imgs/img-error-2.png"
+                    alt="photo two"
+                />
+                <img
+                    class="work-img"
+                    src="imgs/img-error-3.png"
                     alt="photo three"
                 />
                 <img
                     class="work-img"
-                    src="imgs/nature-4.jpg"
+                    src="imgs/img-error-4.png"
                     alt="photo four"
                 />
                 <img
                     class="work-img"
-                    src="imgs/nature-5.jpg"
+                    src="imgs/img-error-5.png"
                     alt="photo five"
                 />
-                <img class="work-img" src="imgs/nature-6.jpg" alt="photo six" />
+                <img
+                    class="work-img"
+                    src="imgs/img-error-6.png"
+                    alt="photo six"
+                />
             </div>
         </section>
-        <!---------------------------------------------------------ABOUT ME-------------------------------------------------------->
-        <h2 id="about" class="section-title">
-            <span class="section-title-color">About</span> Me
-        </h2>
-        <section class="about">
-            <div class="about-box-1">
-                <img class="about-img" src="imgs/woman.jpg" />
-            </div>
-            <div class="about-box-2">
-                <p class="about-text">
-                    I am Anna, I have more than 5 years as a photographer
-                    focused mainly on tourism, photographing for small and large
-                    companies. Passionate about nature and people, and
-                    everything that touches the human mind.
-                </p>
-                <a class="about-button" href="nowhere.html">Download My CV</a>
-            </div>
-        </section>
-        <!---------------------------------------------------------MY SKILLS-------------------------------------------------------->
-        <h2 id="skills" class="section-title">
-            <span class="section-title-color">My</span> Skills
-        </h2>
-        <section class="skills">
-            <div class="bar">
-                <div class="progress progress-70">Lightroom</div>
-                <div class="rest">70%</div>
-                <div class="progress progress-70">Photoshop</div>
-                <div class="rest">70%</div>
-                <div class="progress progress-80">Premiere</div>
-                <div class="rest">80%</div>
-                <div class="progress progress-80">After</div>
-                <div class="rest">80%</div>
-            </div>
 
-            <div class="bar">
-                <div class="progress progress-70">VSCO</div>
-                <div class="rest">70%</div>
-                <div class="progress progress-70">Afterlight</div>
-                <div class="rest">70%</div>
-                <div class="progress progress-80">Ligh</div>
-                <div class="rest">80%</div>
-                <div class="progress progress-80">Snapseed</div>
-                <div class="rest">80%</div>
-            </div>
-        </section>
         <!----------------------------------------------------------CONTACT-------------------------------------------------------->
+
         <h2 class="section-title">
-            <span class="section-title-color">Contact</span> Me
+            <span class="section-title-color">i said that...</span> i DO NOT
+            want to talk with you
         </h2>
         <section id="contact" class="contact">
             <form>
@@ -188,79 +141,10 @@
                 ></textarea>
                 <input class="submit form-text" type="submit" value="Send" />
             </form>
-            <div class="social-container">
-                <h4 class="social-title">Get In Touch</h4>
-                <ul class="social">
-                    <li class="social-list">
-                        <img class="icon" src="imgs/phone.svg" />
-                        <p class="social-text">(782) 154-3658</p>
-                    </li>
-                    <li class="social-list">
-                        <img class="icon" src="imgs/mail.svg" />
-                        <p class="social-text">annaortiz@gmail.com</p>
-                    </li>
-                    <li class="social-list">
-                        <img class="icon" src="imgs/linkedin.svg" />
-                        <p class="social-text">
-                            <a href="https://www.linkedin.com/">Anna Ortiz</a>
-                        </p>
-                    </li>
-                    <li class="social-list">
-                        <img class="icon" src="imgs/inst.svg" />
-                        <p class="social-text">
-                            <a href="https://www.instagram.com/">@AnnaOrtiz</a>
-                        </p>
-                    </li>
-                </ul>
-            </div>
         </section>
         <!----------------------------------------------------------FOOTER-------------------------------------------------------->
         <footer>
-            <ul class="footer-ul">
-                <li class="footer-list">
-                    <a href="facebook.com" target="_blank"
-                        ><img
-                            class="footer-img"
-                            src="imgs/facebook-svgrepo-com.svg"
-                    /></a>
-                </li>
-                <li class="footer-list">
-                    <a href="instagram.com" target="_blank"
-                        ><img
-                            class="footer-img"
-                            src="imgs/instagram-svgrepo-com.svg"
-                    /></a>
-                </li>
-                <li class="footer-list">
-                    <a href="pinterest.com" target="_blank"
-                        ><img
-                            class="footer-img"
-                            src="imgs/pinterest-svgrepo-com.svg"
-                    /></a>
-                </li>
-                <li class="footer-list">
-                    <a href="youtube.com" target="_blank"
-                        ><img
-                            class="footer-img"
-                            src="imgs/youtube-svgrepo-com.svg"
-                    /></a>
-                </li>
-                <li class="footer-list">
-                    <a href="twitter.com" target="_blank"
-                        ><img
-                            class="footer-img"
-                            src="imgs/twitter-svgrepo-com.svg"
-                    /></a>
-                </li>
-                <li class="footer-list">
-                    <a href="linkedin.com" target="_blank"
-                        ><img
-                            class="footer-img"
-                            src="imgs/linkedin-svgrepo-com.svg"
-                    /></a>
-                </li>
-            </ul>
-            <p class="footer-text">All Rights Reserved - 2023</p>
+            <p class="footer-text">n0T all rights reserved - 2o23</p>
         </footer>
     </body>
 </html>
